fix footer flickering

--- a/style.css
+++ b/style.css
@@ -131,14 +131,14 @@ img {
     height: auto;
 }
 
-li a {
+.nav-container li a {
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
-li:hover {
+.nav-container li:hover {
     background-color: #111;
 }
 
@@ -150,7 +150,7 @@ li:hover {
     bottom: 10px;
 }
 
-ul {
+.nav-container ul {
     border: none;
     list-style-type: none;
     margin: auto;
@@ -160,7 +160,15 @@ ul {
     top: 0;
 }
 
-li {
+ul {
+    border: none;
+    list-style-type: none;
+    margin: auto;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.nav-container li {
     float: left;
     border-right: 1px solid #bbb;
     border-left: 1px solid #bbb;
@@ -1076,15 +1084,16 @@ footer {
     background: none;
     display: flex;
     flex-direction: column;
-    gap: 0.3rem;
+    gap: 0.6rem;
 }
 
 .footer-list li {
     float: none;
     border: none;
     padding: 0;
-    font-size: 0.85rem;
+    font-size: 0.95rem;
     opacity: 0.8;
+    line-height: 1.5;
 }
 
 .footer-list li:hover {
